Edit Foto location

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <img src="/img/Foto.jpg">
+    <img src="Foto.jpg">
     <p>IAN LOMBU</p>
 
     <a href="https://github.com/IanCode09" class="featured">GITHUB</a>
